force-app/main/default/objects/Case/fields/Auto_Company__c.field-meta.xml
<CustomField>
    <fullName>Auto_Company__c</fullName>
    <label>Auto Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>