force-app/main/default/objects/Case/fields/Auto_Email__c.field-meta.xml
<CustomField>
    <fullName>Auto_Email__c</fullName>
    <label>Auto Email</label>
    <type>Email</type>
</CustomField>