force-app/main/default/objects/Case/fields/Auto_Name__c.field-meta.xml
<CustomField>
    <fullName>Auto_Name__c</fullName>
    <label>Auto Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>