force-app/main/default/objects/Case/fields/Auto_Phone__c.field-meta.xml
<CustomField>
    <fullName>Auto_Phone__c</fullName>
    <label>Auto Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>