force-app/main/default/objects/Case/fields/Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Age__c</fullName>
    <formula>/*
NOW() -  CreatedDate
*/
(5 * FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 )
+ MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) )
) -
(5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7 )
+ MIN( 5, MOD( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8), 7 ) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age in business days</inlineHelpText>
    <label>Case Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>