force-app/main/default/objects/Case/fields/Case_Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Icon__c</fullName>
    <formula>IF(
ISPICKVAL(Status, &apos;New&apos;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;new&quot;, 16, 16),

IF(
ISPICKVAL(Status, &quot;Closed&quot;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;closed&quot;, 16, 16),

IF(
ISPICKVAL(Status, &quot;Waiting On Client&quot;),
IMAGE(&quot;/img/loading32.gif&quot;, &quot;waiting&quot;, 16, 16),

IF(
OR(ISPICKVAL(Status, &quot;Client Responded&quot;), ISPICKVAL(Status, &quot;Reopened&quot;)),
IMAGE(&quot;/img/func_icons/util/escalation16.gif&quot;, &quot;new&quot;, 16, 16),

IF(
ISPICKVAL(Status, &quot;Waiting On Internal&quot;),
IMAGE(&quot;/img/func_icons/util/alert16.gif&quot;, &quot;new&quot;, 16, 16),
&quot;&quot;

)
)
)
)
)
+ &quot; &quot; +  Text(Status)</formula>
    <label>Case Status</label>
    <type>Text</type>
</CustomField>