force-app/main/default/objects/Case/fields/Converted_To_Sale__c.field-meta.xml
<CustomField>
    <fullName>Converted_To_Sale__c</fullName>
    <formula>IF(
NOT(ISBLANK(Quote__c)),
TRUE,
FALSE
)</formula>
    <label>Converted To Sale</label>
    <type>Checkbox</type>
</CustomField>