force-app/main/default/objects/Case/fields/FastCall__Call_Duration_In_Seconds__c.field-meta.xml
<CustomField>
    <fullName>FastCall__Call_Duration_In_Seconds__c</fullName>
    <description>Call duration in seconds.</description>
    <label>Call Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>