force-app/main/default/objects/Case/fields/FastCall__Call_From__c.field-meta.xml
<CustomField>
    <fullName>FastCall__Call_From__c</fullName>
    <description>Phone number used as Caller Id when calling the target phone number</description>
    <label>Call From</label>
    <type>Phone</type>
</CustomField>