force-app/main/default/objects/Case/fields/FastCall__Call_IVR__c.field-meta.xml
<CustomField>
    <fullName>FastCall__Call_IVR__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + FastCall__Call_Log__r.FastCall__Interactive_Voice_Response__c , FastCall__Call_Log__r.FastCall__Interactive_Voice_Response__r.Name)</formula>
    <label>Call IVR</label>
    <type>Text</type>
</CustomField>