force-app/main/default/objects/Case/fields/FastCall__Call_Log__c.field-meta.xml
<CustomField>
    <fullName>FastCall__Call_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Log</label>
    <referenceTo>FastCall__Connection__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>