force-app/main/default/objects/Case/fields/FastCall__Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>FastCall__Call_Recording__c</fullName>
    <description>URL to the audio file containing the call recording</description>
    <label>Call Recording</label>
    <type>Url</type>
</CustomField>