force-app/main/default/objects/Case/fields/FastCall__Call_To__c.field-meta.xml
<CustomField>
    <fullName>FastCall__Call_To__c</fullName>
    <description>Target phone number dialed</description>
    <label>Call To</label>
    <type>Phone</type>
</CustomField>