force-app/main/default/objects/Case/fields/FastCall__Call_Type__c.field-meta.xml
<CustomField>
    <fullName>FastCall__Call_Type__c</fullName>
    <label>Call Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>