force-app/main/default/objects/Case/fields/FastCall__Voicemail_Log__c.field-meta.xml
<CustomField>
    <fullName>FastCall__Voicemail_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voicemail Log</label>
    <referenceTo>FastCall__Voicemail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>