force-app/main/default/objects/Case/fields/Last_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_Time__c</fullName>
    <inlineHelpText>Timestamp of most recent message (either from OSG or from client)</inlineHelpText>
    <label>Last Response Time</label>
    <type>DateTime</type>
</CustomField>