force-app/main/default/objects/Case/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <description>Captures the procedure taken when the bug was found.</description>
    <inlineHelpText>Indicates the procedure taken when the bug was found.</inlineHelpText>
    <label>Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>