force-app/main/default/objects/Case/fields/Record_Related_to_Bug_Enhancement__c.field-meta.xml
<CustomField>
    <fullName>Record_Related_to_Bug_Enhancement__c</fullName>
    <description>Captures the record name related to the issue or that further defines the requested enhancement.</description>
    <inlineHelpText>Indicates the record name related to the issue or that further defines the requested enhancement.</inlineHelpText>
    <label>Record Related to Bug/Enhancement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>