force-app/main/default/objects/Case/fields/Secondary_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Type__c</fullName>
    <label>Secondary Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Merge</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Certificate Inquiries</fullName>
            </value>
            <value>
                <fullName>Consent Forms</fullName>
            </value>
            <value>
                <fullName>Contract Set-up</fullName>
            </value>
            <value>
                <fullName>Course Cancellation (OSG initiated)</fullName>
            </value>
            <value>
                <fullName>Course Fail</fullName>
            </value>
            <value>
                <fullName>Course Reset</fullName>
            </value>
            <value>
                <fullName>Demo / Account Code</fullName>
            </value>
            <value>
                <fullName>Distributors</fullName>
            </value>
            <value>
                <fullName>Evaluation Requests</fullName>
            </value>
            <value>
                <fullName>Freight Forward Request</fullName>
            </value>
            <value>
                <fullName>How-Tos</fullName>
            </value>
            <value>
                <fullName>Incorrect Items / Qty</fullName>
            </value>
            <value>
                <fullName>Name Corrections</fullName>
            </value>
            <value>
                <fullName>Order Cancellation / Refunds</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Receipt / Invoice Inquiries</fullName>
            </value>
            <value>
                <fullName>Requirements</fullName>
            </value>
            <value>
                <fullName>Reschedules / Cancellations</fullName>
            </value>
            <value>
                <fullName>Re-ship/Lost</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Shipping Update</fullName>
            </value>
            <value>
                <fullName>TTT - Participant Manuals Request</fullName>
            </value>
            <value>
                <fullName>Unable to Access / Login</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>