force-app/main/default/objects/Case/fields/Steps_to_Recreate__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Recreate__c</fullName>
    <description>Captures the steps to recreate the bug.</description>
    <inlineHelpText>Indicates the steps to recreate the bug.</inlineHelpText>
    <label>Steps to Recreate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>