force-app/main/default/objects/Case/fields/Tertiary_Type__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Type__c</fullName>
    <description>Captures the tertiary level of type for the case</description>
    <inlineHelpText>Indicates the tertiary type</inlineHelpText>
    <label>Tertiary Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Secondary_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulting - Excellence Program</fullName>
            </value>
            <value>
                <fullName>Consulting - General</fullName>
            </value>
            <value>
                <fullName>Devices</fullName>
            </value>
            <value>
                <fullName>Distributors</fullName>
            </value>
            <value>
                <fullName>Green Book</fullName>
            </value>
            <value>
                <fullName>JHSC</fullName>
            </value>
            <value>
                <fullName>JHSC1 DL</fullName>
            </value>
            <value>
                <fullName>JHSC Blended</fullName>
            </value>
            <value>
                <fullName>JHSC DL</fullName>
            </value>
            <value>
                <fullName>JHSC Part 1 Online</fullName>
            </value>
            <value>
                <fullName>LMS</fullName>
            </value>
            <value>
                <fullName>LMS - A la carte</fullName>
            </value>
            <value>
                <fullName>LMS - Membership</fullName>
            </value>
            <value>
                <fullName>LMS - SCORM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Supplies</fullName>
            </value>
            <value>
                <fullName>TTT</fullName>
            </value>
            <value>
                <fullName>TTT PMs</fullName>
            </value>
            <value>
                <fullName>TTT Portal</fullName>
            </value>
            <value>
                <fullName>WAHC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>