force-app/main/default/objects/Case/fields/Time_To_Close__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Close__c</fullName>
    <formula>If(
NOT(ISBLANK(ClosedDate)),
ClosedDate - CreatedDate,
NULL
)</formula>
    <label>Time To Close</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>