force-app/main/default/objects/Case/fields/Time_To_First_Response__c.field-meta.xml
<CustomField>
    <fullName>Time_To_First_Response__c</fullName>
    <formula>If(
NOT(ISBLANK(First_Response_Time__c)),
First_Response_Time__c - CreatedDate,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time To First Response</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>