force-app/main/default/objects/Case/fields/Time_To_Last_Response__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Last_Response__c</fullName>
    <formula>If(
NOT(ISBLANK(Last_Response_Time__c)),
NOW() - Last_Response_Time__c,
NULL
)</formula>
    <label>Time To Last Response</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>