force-app/main/default/objects/Case/recordTypes/CSS_Case.recordType-meta.xml
<RecordType>
    <fullName>CSS_Case</fullName>
    <active>true</active>
    <businessProcess>CSS Support Process</businessProcess>
    <label>CSS Case</label>
</RecordType>