force-app/main/default/objects/Case/recordTypes/Partner_Case.recordType-meta.xml
<RecordType>
    <fullName>Partner_Case</fullName>
    <active>true</active>
    <businessProcess>CSS Support Process</businessProcess>
    <label>Partner Case</label>
</RecordType>