force-app/main/default/objects/Case/validationRules/Account_Must_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Must_Match</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISBLANK(AccountId)),
 NOT(ISBLANK(ContactId)),
 Contact.AccountId != AccountId 
)</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Contact must belong to same account as case!</errorMessage>
</ValidationRule>