force-app/main/default/objects/Case/validationRules/Cannot_Change_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Owner</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(OwnerId),
not( $User.Alias = &apos;aivan&apos;),
not( $User.Alias = &apos;gthom&apos;),
not ($User.Alias = &apos;slam&apos;),
not ($User.Alias = &apos;bmath&apos;),
not ($User.Alias = &apos;lcruz&apos;)
)</errorConditionFormula>
    <errorMessage>You do not have permission to change case owner!</errorMessage>
</ValidationRule>