force-app/main/default/objects/Case/validationRules/Cannot_close_without_contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_close_without_contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISBLANK(ContactId),
 ISPICKVAL(Status, &apos;Closed&apos;),
 ISCHANGED(Status),
 AND(
 NOT(ISPICKVAL(Secondary_Type__c, &apos;Demo / Account Code&apos;)),
 NOT(ISPICKVAL(Type, &apos;Spam&apos;)),
 NOT(ISPICKVAL(Type, &apos;Product Inquiry&apos;)),
 NOT(ISPICKVAL(Type, &apos;New Client&apos;))
 )
)</errorConditionFormula>
    <errorMessage>The case requires a contact to close!</errorMessage>
</ValidationRule>