force-app/main/default/objects/Case/validationRules/Cannot_Set_to_New_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Set_to_New_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status, &apos;New&apos;),
ISCHANGED(Status),
NOT(ISPICKVAL(PRIORVALUE(Status), &apos;New&apos;)),
NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>Cannot set a ticket to new!</errorMessage>
</ValidationRule>