force-app/main/default/objects/Case/validationRules/Requires_Lead_To_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Requires_Lead_To_Close</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Lead__c),
ISPICKVAL(Status, &apos;Closed&apos;),
ISCHANGED(Status),
ISPICKVAL(Type, &apos;New Client&apos;)
)</errorConditionFormula>
    <errorMessage>The requires a lead to close!</errorMessage>
</ValidationRule>