force-app/main/default/objects/Case/validationRules/Requires_Type_To_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Requires_Type_To_Close</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &apos;Closed&apos;),
ISCHANGED(Status),
ISPICKVAL(Type, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Case requires a type to close!</errorMessage>
</ValidationRule>