force-app/main/default/objects/Case/listViews/All_Unclosed_Cases.listView-meta.xml
<ListView>
    <fullName>All_Unclosed_Cases</fullName>
    <columns>Case_Status_Icon__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>New,Closed</value>
    </filters>
    <label>All Unclosed Cases</label>
</ListView>