force-app/main/default/objects/Case/listViews/AllCases.listView-meta.xml
<ListView>
    <fullName>AllCases</fullName>
    <columns>Case_Status_Icon__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CONTACT.ACCOUNT</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>First_Response_Time__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
</ListView>