force-app/main/default/objects/Case/listViews/CSS_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CSS_Queue_Case</fullName>
    <columns>Case_Status_Icon__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Merged</value>
    </filters>
    <label>Tier 1 CSS Queue</label>
    <queue>Tier_1_CSS_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>