force-app/main/default/objects/Case/listViews/NOT_Tier_1_CSS_Queue.listView-meta.xml
<ListView>
    <fullName>NOT_Tier_1_CSS_Queue</fullName>
    <columns>Case_Status_Icon__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Waiting On Client,Closed,Waiting for Customer,Escalated,Merged</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notEqual</operation>
        <value>Tier 1 CSS Queue</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>bmath</value>
    </filters>
    <label>NOT - Tier 1 CSS Queue</label>
</ListView>