force-app/main/default/objects/Case/listViews/Partner_Cases.listView-meta.xml
<ListView>
    <fullName>Partner_Cases</fullName>
    <columns>Case_Status_Icon__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Partner_Case</value>
    </filters>
    <label>Partner Cases</label>
</ListView>