force-app/main/default/objects/Case/listViews/Tier_2_CSS_Case.listView-meta.xml
<ListView>
    <fullName>Tier_2_CSS_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Tier 2 CSS Queue</label>
    <queue>Tier_2_CSS_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>